# cli-wallet

./: Cargo.toml  README.md  SECURITY.md
docs/: API.md
examples/: README.md  advanced_usage.sh  basic_usage.sh
src/: debug.rs  error.rs  lib.rs  main.rs  wallet.rs
src/cli/: commands.rs  mod.rs  parser.rs
src/crypto/: hashing.rs  keys.rs  mod.rs  signing.rs
src/utils/: formatting.rs  mod.rs  validation.rs
tests/: debug_test.rs  integration_tests.rs
